# notes_app

./: CMakeLists.txt  README.md
.github/workflows/: pipeline.yml
src/: main.c
src/database/: database.c  database.h
src/linked_list/: linked_list.c  linked_list.h
src/linked_list/tests/: test_linked_list.c
src/note/: note.h
src/utils/: utils.c  utils.h
src/utils/tests/: test_utils.c
